--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.0.4"
   },
   "devDependencies": {
