--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.1",
     "react-spinners": "^0.13.8",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.0.4"
   },
   "devDependencies": {
